@@ -1,3 +1,8 @@
+
+2008-04-23  Lynn Garren
+
+	* src/GenVertex.cc: fix bug in edge_iterator operator++
+
   --------------------------  HepMC-2.03.07  --------------------------
 
 2008-04-18  Lynn Garren
